itests: pin nx-examples, drop spring's enable_preview, make the fetch non-destructive
Running the itests after two months of SDK work turned up as much wrong with
the itests as with aeb.

spring-data-examples: every one of its 174 build/test files carried
`enable_preview()` next to `release("25")`. Upstream does not compile with
preview — its `jvm.enable-preview` property is declared EMPTY in the root
pom.xml and used in exactly one place, a surefire argLine prefix in
jpa/eclipselink. It is a hook for turning preview on ad hoc, not a setting,
and the migration had promoted it to an unconditional compiler flag. That
pinned the whole project to JDK 25, because javac accepts --enable-preview
only for its own release, so on a JDK 26 host 83 of 90 modules failed with the
identical message for a flag upstream never sets. Removed; `release("25")`
stays, since that is upstream's real maven.compiler.source/target. With this
and the lib/java modular-classpath fix, 61 of 90 modules compile (was 6) and
the test suites run: 69/77.

nx-examples: PINNED to 2cae706, and was tracking HEAD. Upstream migrated to
TypeScript solution-style configs (#458) — tsconfig `paths` aliases replaced
by npm-workspace package resolution, babel and webpack configs deleted,
libs/shared/product/types now re-exporting a `./generated` module an `nx
codegen` target produces. An unpinned fetch had replaced the SUBJECT of the
test: 82 of its 88 recorded upstream files were gone and it failed with
`Cannot find module '@nx-example/shared-jsxify'`, which says nothing about
aeb. 2cae706 is the parent of #458 and matches the recorded file list exactly,
233 of 233. Re-migrating to the current layout is worth doing and would
exercise TS project references, which nothing in itests/ covers — that is a
migration, not a fix, and the pin moves with it.

Also adds the libs/shared/styles node that two apps had been depending on
without it ever having been written — an Nx library with `"targets": {}`, so
it declares no b